# Fancy-Calculator_-DL-Experiments

./: LICENSE  README.md  SNS_Addiction_Analysis_Report.docx
[14.04.26] smartphone_addiction_analysis/: README.md  Smartphone_Addiction_GAN_Report.docx  smartphone_addiction_analysis.py
[15.04.26] social_media_user_behavior/: README.md
[16.04.26] animation_movies_enriched/: 01_nlp_genre_classification.py  02_tabular_rating_prediction.py  README.md  eval_01_nlp_fast.py  eval_02_tabular.py  eval_gnn_nc.pt  eval_lp_best.pt  eval_tab_best.pt
[18.04.26] youtube_predictor/: Comparative_Analysis_Report.docx  README.md  YouTube_Views_Prediction_Report.docx  build_comparison_report.py  build_report.py  export_charts.py
[19.04.26 ]Global Inflation vs Interest Rates/: Cargo.toml  README.md  build.rs
[19.04.26 ]Global Inflation vs Interest Rates/src/: main.rs
[20.04.26]Top5_League_Players_2017to2024/: Football_Analytics_Comparison.docx  Football_Analytics_Report.docx  README.md
[21.04.26-1] Gene_Expression_Analysis_and_Disease_Relationship_Synthetic/: README.md  report_english.docx  umap_analysis.py
[21.04.26] Q-Learning rl_blackjack/: Blackjack_RL_Report.docx  README.md
[22.04.26] smartphone_dashboard/: README.md  smartphone_pipeline.py
[23.04.26] AI4I_Predictive_Maintenance/: AI4I_Full_Report.docx  README.md
[25.04.26] Car Repair Assistant/: Car_Repair_Assistant_Technical_Report.docx  README.md
[25.04.26]RL_Simulator/: README.md  RL_Simulator_Report.docx
[26.04.26] QMIX Simulator/: README.md
[26.04.26]qtran_simulator/: QMIX_vs_QTRAN_Comparison_Report.docx  (+2 more)
(+18 files in other folders)
